# qAlgorithms

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CmakeLists.txt  Dockerfile  Doxyfile  MakeFile  Makefile  README.md  TODO.md  centroids.csv  compile_commands.json  data.csv  data.txt  dataPoints.csv  dataPoints.txt  install.sh  log_qBinning_beta.csv  makefile  notes.txt  num_features.csv  output.csv  output_2.csv  public_datasets.json  run_cppcheck.sh  separators.csv  setup.sh  spectrum.csv  spectrum_11.csv  temp  temp.cpp  test.csv  treatedData.csv
R/: Comparison_Aquaflow.Rmd  SFC_DoE_visualisation.Rmd  blank_correlations.Rmd  compare_LC_kali.Rmd  component_check.Rmd  eval_peakFitTest.Rmd  filenames.csv  fix_tof_centroids.Rmd  processStats.Rmd  qbinning_analyse.Rmd  qpattern_eval.Rmd  ratio_pregroup.Rmd  recovery_standards.Rmd  regression_bonusstats.Rmd  results_samuel.csv  standard_overview_tol-10ppm_masserror-0.5ppm.csv  standards_samuel.csv  tanimoto_compare.Rmd  test_featuremerge.Rmd  visualise_qbin.Rmd
docker/: Dockerfile
docs/: CNAME  description_qpeaks.md  explanation_critval_qbinning.md  moments_peakmodel.md  output_colnames.md  terminology.md
experimental/: optim_regr_window.py
html/: _hello-example.html  _r_e_a_d_m_e_8md.html  _stream_craft__mzml_8cpp.html  _stream_craft__mzml_8cpp_source.html  _stream_craft__mzml_8hpp.html  _stream_craft__mzml_8hpp_source.html  _stream_craft__mzxml_8cpp.html  _stream_craft__mzxml_8cpp_source.html  _stream_craft__mzxml_8hpp.html  _stream_craft__mzxml_8hpp_source.html  _stream_craft__utils_8cpp.html  _stream_craft__utils_8cpp_source.html  _stream_craft__utils_8hpp.html  _stream_craft__utils_8hpp_source.html  annotated.html  citelist.html  classes.html  classpugi_1_1xml__attribute-members.html  classpugi_1_1xml__attribute.html  classpugi_1_1xml__attribute__iterator-members.html  classpugi_1_1xml__attribute__iterator.html  classpugi_1_1xml__document-members.html  classpugi_1_1xml__document.html  classpugi_1_1xml__named__node__iterator-members.html  classpugi_1_1xml__named__node__iterator.html  classpugi_1_1xml__node-members.html  classpugi_1_1xml__node.html  classpugi_1_1xml__node__iterator-members.html  classpugi_1_1xml__node__iterator.html  classpugi_1_1xml__object__range-members.html  classpugi_1_1xml__object__range.html  classpugi_1_1xml__text-members.html  classpugi_1_1xml__text.html  classpugi_1_1xml__tree__walker-members.html  classpugi_1_1xml__tree__walker.html  classpugi_1_1xml__writer-members.html  classpugi_1_1xml__writer.html  classpugi_1_1xml__writer__file-members.html  classpugi_1_1xml__writer__file.html  classpugi_1_1xml__writer__stream-members.html  (+375 more)
include/: StreamCraft_mzml.h  qalgorithms.h  qalgorithms_ascii_logo.h  qalgorithms_console_output.h  qalgorithms_datatype.h  qalgorithms_datatype_chromatogram.h  qalgorithms_datatype_mass_spectrum.h  qalgorithms_datatype_peak.h  qalgorithms_datatypes.h  qalgorithms_global_vars.h  qalgorithms_input.h  qalgorithms_input_output.h  qalgorithms_matrix.h  qalgorithms_measurement_data.h  qalgorithms_measurement_data_lcms.h  qalgorithms_measurement_data_tensor.h  qalgorithms_metafiles.h  qalgorithms_peak.h  qalgorithms_qPattern.h  qalgorithms_qbin.h  qalgorithms_qbin2.h  qalgorithms_qpattern.h  qalgorithms_qpeaks.h  qalgorithms_read_file.h  qalgorithms_refmatrix.h  qalgorithms_utils.h
latex/: _hello-example.tex  _stream_craft__mzml_8cpp.tex  _stream_craft__mzml_8cpp_source.tex  _stream_craft__mzml_8hpp.tex  _stream_craft__mzml_8hpp_source.tex  _stream_craft__mzxml_8cpp.tex  _stream_craft__mzxml_8cpp_source.tex  _stream_craft__mzxml_8hpp.tex  _stream_craft__mzxml_8hpp_source.tex  _stream_craft__utils_8cpp.tex  _stream_craft__utils_8cpp_source.tex  _stream_craft__utils_8hpp.tex  _stream_craft__utils_8hpp_source.tex  annotated.tex  bibTmpFile_1.bib  citelist.tex  classpugi_1_1xml__attribute.tex  classpugi_1_1xml__attribute__iterator.tex  classpugi_1_1xml__document.tex  classpugi_1_1xml__named__node__iterator.tex  classpugi_1_1xml__node.eps  classpugi_1_1xml__node.tex  classpugi_1_1xml__node__iterator.tex  classpugi_1_1xml__object__range.tex  classpugi_1_1xml__text.tex  classpugi_1_1xml__tree__walker.tex  classpugi_1_1xml__writer.tex  classpugi_1_1xml__writer__file.eps  classpugi_1_1xml__writer__file.tex  classpugi_1_1xml__writer__stream.eps  classpugi_1_1xml__writer__stream.tex  classpugi_1_1xpath__exception.eps  classpugi_1_1xpath__exception.tex  classpugi_1_1xpath__node.tex  classpugi_1_1xpath__node__set.tex  classpugi_1_1xpath__query.tex  classpugi_1_1xpath__variable.tex  classpugi_1_1xpath__variable__set.tex  classq_1_1_data_type_1_1_l_c___i_m_s___m_s.eps  classq_1_1_data_type_1_1_l_c___i_m_s___m_s.tex  (+171 more)
python/: mlOnCoeff.py  plotPeaksToPython.py
report/: discussion_tests.md  report.md  report_process_statistics.Rmd
src/: StreamCraft_mzml.cpp  qCentroid.cpp  qalgorithms.cpp  qalgorithms_ascii_logo.cpp  qalgorithms_datatype_chromatogram.cpp  qalgorithms_datatype_mass_spectrum.cpp  qalgorithms_datatype_peak.cpp  qalgorithms_input_output.cpp  qalgorithms_main.cpp  qalgorithms_main_old.cpp  qalgorithms_matrix.cpp  qalgorithms_measurement_data.cpp  qalgorithms_measurement_data_lcms.cpp  qalgorithms_measurement_data_tensor.cpp  qalgorithms_metafiles.cpp  qalgorithms_peak.cpp  qalgorithms_qPattern.cpp  qalgorithms_qbin.cpp  qalgorithms_qbin2.cpp  qalgorithms_qpattern.cpp  qalgorithms_qpeaks.cpp  qalgorithms_read_file.cpp  qalgorithms_refmatrix.cpp  qalgorithms_utils.cpp  qalgorithmy_qbin2.cpp  raw_data_dependencies.txt
test/: .Rhistory  Comparison_Aquaflow.Rmd  SFC_DoE_visualisation.Rmd  aquaflow_crit2.csv  bintypes.csv  compare_LC_kali.Rmd  control_DQSfaults.jl  control_mzsplits.jl  emptyBins.csv  joblist.txt  joblist2.txt  monobin.csv  notes.txt  opstats_subsetmz.csv  qBinning.rmd  qBinning_jul.jl  qbin_julia.jl  qbinning_analyse.Rmd  qbinnings_test.csv  qcentroids_test.csv  raw_data_dependencies.txt  readcsv.cpp  report.md  scores_19.08.csv  test.csv  test_common_math.cpp  test_file_io.cpp  test_input_output.cpp  test_orbitrap.csv  test_qCentroid.cpp  (+17 more)
(+774 files in other folders)
